src/snapshots/transmute__dot__tests__fibonacci_iter.snap
---
source: src/dot.rs
expression: "Dot::new(&ast, &symbols).serialize()"
---
//graphviz file
digraph ast {
ordering="out";
splines=false;
n0[label=""][shape="point"][fontcolor="black"]
n1[label="eq()"][shape="plaintext"][fontcolor="orange"]
n2[label="n"][shape="plaintext"][fontcolor="blue"]
n3[label="0"][shape="plaintext"][fontcolor="black"]
n4[label="0"][shape="plaintext"][fontcolor="black"]
n5[label="ret"][shape="plaintext"][fontcolor="black"]
n6[label="if"][shape="plaintext"][fontcolor="black"]
n7[label="eq()"][shape="plaintext"][fontcolor="orange"]
n8[label="n"][shape="plaintext"][fontcolor="blue"]
n9[label="1"][shape="plaintext"][fontcolor="black"]
n10[label="1"][shape="plaintext"][fontcolor="black"]
n11[label="ret"][shape="plaintext"][fontcolor="black"]
n12[label="if"][shape="plaintext"][fontcolor="black"]
n13[label="n"][shape="plaintext"][fontcolor="blue"]
n14[label="let n"][shape="plaintext"][fontcolor="black"]
n15[label="0"][shape="plaintext"][fontcolor="black"]
n16[label="let prev_prev"][shape="plaintext"][fontcolor="black"]
n17[label="1"][shape="plaintext"][fontcolor="black"]
n18[label="let prev"][shape="plaintext"][fontcolor="black"]
n19[label="0"][shape="plaintext"][fontcolor="black"]
n20[label="let current"][shape="plaintext"][fontcolor="black"]
n21[label="gt()"][shape="plaintext"][fontcolor="orange"]
n22[label="n"][shape="plaintext"][fontcolor="blue"]
n23[label="1"][shape="plaintext"][fontcolor="black"]
n24[label=""][shape="point"][fontcolor="black"]
n25[label="current"][shape="plaintext"][fontcolor="blue"]
n26[label="add()"][shape="plaintext"][fontcolor="orange"]
n27[label="prev_prev"][shape="plaintext"][fontcolor="blue"]
n28[label="prev"][shape="plaintext"][fontcolor="blue"]
n29[label="set"][shape="plaintext"][fontcolor="black"]
n30[label="prev_prev"][shape="plaintext"][fontcolor="blue"]
n31[label="prev"][shape="plaintext"][fontcolor="blue"]
n32[label="set"][shape="plaintext"][fontcolor="black"]
n33[label="prev"][shape="plaintext"][fontcolor="blue"]
n34[label="current"][shape="plaintext"][fontcolor="blue"]
n35[label="set"][shape="plaintext"][fontcolor="black"]
n36[label="n"][shape="plaintext"][fontcolor="blue"]
n37[label="sub()"][shape="plaintext"][fontcolor="orange"]
n38[label="n"][shape="plaintext"][fontcolor="blue"]
n39[label="1"][shape="plaintext"][fontcolor="black"]
n40[label="set"][shape="plaintext"][fontcolor="black"]
n41[label="while"][shape="plaintext"][fontcolor="black"]
n42[label="current"][shape="plaintext"][fontcolor="blue"]
n43[label="{ {<fn>fibo(): number } | { { <p0>n } | { <t0>number } } }"][shape="record"][fontcolor="black"]
n1 -> n2[style="solid"][color="black"][arrowhead="none"]
n1 -> n3[style="solid"][color="black"][arrowhead="none"]
n5 -> n4[style="solid"][color="black"][arrowhead="none"]
n6 -> n1[style="solid"][color="black"][arrowhead="none"]
n6 -> n5[style="solid"][color="green"][arrowhead="none"]
n0 -> n6[style="solid"][color="black"][arrowhead="none"]
n7 -> n8[style="solid"][color="black"][arrowhead="none"]
n7 -> n9[style="solid"][color="black"][arrowhead="none"]
n11 -> n10[style="solid"][color="black"][arrowhead="none"]
n12 -> n7[style="solid"][color="black"][arrowhead="none"]
n12 -> n11[style="solid"][color="green"][arrowhead="none"]
n0 -> n12[style="solid"][color="black"][arrowhead="none"]
n14 -> n13[style="solid"][color="black"][arrowhead="none"]
n0 -> n14[style="solid"][color="black"][arrowhead="none"]
n16 -> n15[style="solid"][color="black"][arrowhead="none"]
n0 -> n16[style="solid"][color="black"][arrowhead="none"]
n18 -> n17[style="solid"][color="black"][arrowhead="none"]
n0 -> n18[style="solid"][color="black"][arrowhead="none"]
n20 -> n19[style="solid"][color="black"][arrowhead="none"]
n0 -> n20[style="solid"][color="black"][arrowhead="none"]
n21 -> n22[style="solid"][color="black"][arrowhead="none"]
n21 -> n23[style="solid"][color="black"][arrowhead="none"]
n26 -> n27[style="solid"][color="black"][arrowhead="none"]
n26 -> n28[style="solid"][color="black"][arrowhead="none"]
n29 -> n25[style="solid"][color="black"][arrowhead="none"]
n29 -> n26[style="solid"][color="black"][arrowhead="none"]
n24 -> n29[style="solid"][color="black"][arrowhead="none"]
n32 -> n30[style="solid"][color="black"][arrowhead="none"]
n32 -> n31[style="solid"][color="black"][arrowhead="none"]
n24 -> n32[style="solid"][color="black"][arrowhead="none"]
n35 -> n33[style="solid"][color="black"][arrowhead="none"]
n35 -> n34[style="solid"][color="black"][arrowhead="none"]
n24 -> n35[style="solid"][color="black"][arrowhead="none"]
n37 -> n38[style="solid"][color="black"][arrowhead="none"]
n37 -> n39[style="solid"][color="black"][arrowhead="none"]
n40 -> n36[style="solid"][color="black"][arrowhead="none"]
n40 -> n37[style="solid"][color="black"][arrowhead="none"]
n24 -> n40[style="solid"][color="black"][arrowhead="none"]
n41 -> n21[style="solid"][color="black"][arrowhead="none"]
n41 -> n24[style="solid"][color="black"][arrowhead="none"]
n0 -> n41[style="solid"][color="black"][arrowhead="none"]
n0 -> n42[style="solid"][color="black"][arrowhead="none"]
n43 -> n0[style="solid"][color="black"][arrowhead="none"]
n22 -> n14[style="dotted"][color="gray"][arrowhead="vee"][constraint=false]
n27 -> n16[style="dotted"][color="gray"][arrowhead="vee"][constraint=false]
n28 -> n18[style="dotted"][color="gray"][arrowhead="vee"][constraint=false]
n25 -> n20[style="dotted"][color="gray"][arrowhead="vee"][constraint=false]
n31 -> n18[style="dotted"][color="gray"][arrowhead="vee"][constraint=false]
n30 -> n16[style="dotted"][color="gray"][arrowhead="vee"][constraint=false]
n34 -> n20[style="dotted"][color="gray"][arrowhead="vee"][constraint=false]
n33 -> n18[style="dotted"][color="gray"][arrowhead="vee"][constraint=false]
n38 -> n14[style="dotted"][color="gray"][arrowhead="vee"][constraint=false]
n36 -> n14[style="dotted"][color="gray"][arrowhead="vee"][constraint=false]
n42 -> n20[style="dotted"][color="gray"][arrowhead="vee"][constraint=false]
n2 -> n43:p0[style="dotted"][color="gray"][arrowhead="vee"][constraint=false]
n8 -> n43:p0[style="dotted"][color="gray"][arrowhead="vee"][constraint=false]
n13 -> n43:p0[style="dotted"][color="gray"][arrowhead="vee"][constraint=false]}
