src/snapshots/transmute__dot__tests__nested_struct.snap
---
source: src/dot.rs
expression: "Dot::new(&ast, &symbols, &types).serialize()"
---
//graphviz file
digraph ast {
ordering="out";
splines=false;
n0[label="{ <struct>Point | { { <f0>x | <f1>y } | { <t0>number | <t1>number } } }"][shape="record"][fontcolor="black"]
n1[label="{ <struct>Segment | { { <f0>from | <f1>to } | { <t0>Point | <t1>Point } } }"][shape="record"][fontcolor="black"]
n2[label=""][shape="point"][fontcolor="black"]
n3[label="{ {<fn>len() } | { { <p0>seg } | { <t0>Segment } } }"][shape="record"][fontcolor="black"]
n3 -> n2[style="solid"][color="black"][arrowhead="none"]
n1:t0 -> n0[style="dotted"][color="orange"][arrowhead="none"]
n1:t1 -> n0[style="dotted"][color="orange"][arrowhead="none"]
n3:t0 -> n1[style="dotted"][color="orange"][arrowhead="none"]}
