src/snapshots/transmute__dot__tests__struct_field_access.snap
---
source: src/dot.rs
expression: "Dot::new(&ast, &symbols, &types).serialize()"
---
//graphviz file
digraph ast {
ordering="out";
splines=false;
n0[label="{ <struct>Point | { { <f0>x | <f1>y } | { <t0>number | <t1>number } } }"][shape="record"][fontcolor="black"]
n1[label="p"][shape="plaintext"][fontcolor="blue"]
n2[label="x"][shape="plaintext"][fontcolor="blue"]
n3[label="."][shape="plaintext"][fontcolor="black"]
n4[label="{ {<fn>len() } | { { <p0>p } | { <t0>Point } } }"][shape="record"][fontcolor="black"]
n3 -> n1[style="solid"][color="black"][arrowhead="none"]
n3 -> n2[style="solid"][color="black"][arrowhead="none"]
n4 -> n3[style="solid"][color="black"][arrowhead="none"]
n1 -> n4:p0[style="dotted"][color="gray"][arrowhead="vee"][constraint=false]
n4:t0 -> n0[style="dotted"][color="orange"][arrowhead="none"]}
